# internal/interfaces/http/auth/router.go
@@ -7,5 +7,6 @@ func RegisterRoutes(router gin.IRouter, handler *AuthHandler) {
 	{
 		api.POST("/sign-up", handler.SignUp)
 		api.POST("/verify-email", handler.VerifyEmail)
+		api.POST("/confirm-email", handler.ConfirmEmail)
 	}
 }
